<resources>
    <string name="app_name">BookingApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="accommodation_name">Accommodation 1</string>
    <string name="accommodation_location">Location 1</string>
    <string name="accommodation_image">Accommodation image</string>
    <string name="filters">Filters</string>
    <string name="sort">Sort</string>
    <string name="category">Category</string>
    <string name="smartphone">Smartphone</string>
    <string name="tablet">Tablet</string>
    <string name="accommodations">Accommodations</string>
    <string name="cart">Cart</string>
    <string name="navigation_drawer_open">Navigation Drawer Open</string>
    <string name="navigation_drawer_close">Navigation Drawer Close</string>
    <string name="language">Language</string>
    <string name="booking_app">Booking App</string>
    <string name="reservation_guest_input_hint">Enter guest number</string>
    <string name="type">Type</string>
    <string name="hotel">Hotel</string>
    <string name="apartment">Apartment</string>
    <string name="motel">Motel</string>
    <string name="studio">Studio</string>
    <string name="reservations">Reservations</string>
    <string name="my_accommodations">My Accommodations</string>
    <string name="don_t_have_an_account_register"><a href="#">Don’t have an account? Register</a></string>
    <string name="already_have_an_account_login"><a href="#">Already have an account? Login</a></string>
</resources>