<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/accommodation_card_item"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/accommodation_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/a"
        android:contentDescription="@string/accommodation_image"></ImageView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/accommodation_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/accommodation_name"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/accommodation_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/accommodation_location"></TextView>

    </LinearLayout>

    <!--    <LinearLayout-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="15dp"-->
    <!--        android:orientation="vertical">-->

    <!--        <LinearLayout-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content">-->

    <!--            <TextView-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:paddingTop="15dp"-->
    <!--                android:textColor="@android:color/black"-->
    <!--                android:text="Min guests "></TextView>-->

    <!--            <TextView-->
    <!--                android:id="@+id/accommodation_min_guests"-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:textColor="@android:color/black"-->
    <!--                android:text="2"></TextView>-->

    <!--        </LinearLayout>-->

    <!--        <LinearLayout-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content">-->

    <!--            <TextView-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:paddingTop="15dp"-->
    <!--                android:textColor="@android:color/black"-->
    <!--                android:text="Max guests "></TextView>-->

    <!--            <TextView-->
    <!--                android:id="@+id/accommodation_max_guests"-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:textColor="@android:color/black"-->
    <!--                android:text="5"></TextView>-->

    <!--        </LinearLayout>-->

    <!--    </LinearLayout>-->

</LinearLayout>