<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_accommodations"
            android:title="@string/accommodations"
            android:icon="@drawable/accommodation"
            android:orderInCategory="100" />
        <item android:id="@+id/nav_my_accommodations"
            android:title="@string/my_accommodations"
            android:icon="@drawable/accommodation"
            android:orderInCategory="100"
            android:visible="false" />
        <item android:id="@+id/nav_favourite_accommodations"
            android:title="Favourite Accommodations"
            android:icon="@drawable/favourite"
            android:iconTint="@color/black"
            android:orderInCategory="100"
            android:visible="false" />
        <item android:id="@+id/nav_reservations"
            android:title="@string/reservations"
            android:icon="@drawable/reservation"
            android:orderInCategory="100"
            android:visible="false" />
        <item android:id="@+id/nav_account"
            android:title="Account"
            android:icon="@drawable/account"
            android:orderInCategory="100"
            android:visible="false"/>

        <item android:id="@+id/nav_user_account"
            android:title="User's Account"
            android:icon="@drawable/account"
            android:orderInCategory="100"
            android:visible="false"/>

        <item android:id="@+id/nav_create_accommodation"
            android:title="Create Accommodation"
            android:icon="@drawable/create_accommodation"
            android:orderInCategory="100"
            android:visible="false" />

        <item android:id="@+id/nav_login"
            android:title="Login"
            android:icon="@drawable/login_register"
            android:orderInCategory="100" />

        <item android:id="@+id/nav_register"
            android:title="Register"
            android:icon="@drawable/login_register"
            android:orderInCategory="100" />

        <item android:id="@+id/nav_notifications"
            android:title="Notifications"
            android:icon="@drawable/notifications_users"
            android:orderInCategory="100"
            android:visible="false" />

        <item android:id="@+id/nav_accommodation_requests"
            android:title="Requests"
            android:icon="@drawable/request"
            android:orderInCategory="100"
            android:visible="false" />

        <item android:id="@+id/nav_reports"
            android:title="Reports"
            android:icon="@drawable/ic_product"
            android:orderInCategory="100"
            android:visible="false" />

<!--        <item android:id="@+id/nav_new"-->
<!--            android:title="@string/new_product"-->
<!--            android:icon="@drawable/ic_new"-->
<!--            android:orderInCategory="200"/>-->

<!--        <item android:id="@+id/nav_profile"-->
<!--            android:title="@string/profile"-->
<!--            android:icon="@drawable/ic_face"-->
<!--            android:orderInCategory="300" />-->

<!--        <item android:id="@+id/nav_logout"-->
<!--            android:title="@string/logout"-->
<!--            android:icon="@drawable/ic_logout"-->
<!--            android:orderInCategory="300" />-->
    </group>
</menu>
