<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.accommodation.AccommodationsPageFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".fragments.accommodation.AccommodationsPageFragment">
        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:text="Location: "
                android:textSize="18sp"
                android:layout_marginTop="12dp"></TextView>
            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_text"
                app:queryHint="Location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:background="@drawable/border_background"
                android:theme="@style/Theme.BookingApp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="Guest number: "
                android:textSize="18sp"
                android:layout_marginTop="3dp"></TextView>
            <EditText
                android:id="@+id/search_guest_number"
                app:queryHint="Location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/reservation_guest_input_hint"
                android:layout_weight="0.6"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:text="Start date: "
                android:textSize="18sp"
                android:layout_marginTop="3dp"></TextView>
            <Button
                android:id="@+id/search_start_date"
                android:layout_width="0dp"
                android:layout_weight="0.65"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Pick Start Date"
                android:layout_alignParentRight="true"
                android:textAllCaps="false" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:text="End date: "
                android:textSize="18sp"
                android:layout_marginTop="3dp"></TextView>
            <Button
                android:id="@+id/search_end_date"
                android:layout_width="0dp"
                android:layout_weight="0.65"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Pick End Date"
                android:layout_alignParentRight="true"
                android:textAllCaps="false" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            >

            <Button
                android:id="@+id/btnFilters"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/filters"
                tools:ignore="TextContrastCheck"/>

            <Spinner
                android:id="@+id/btnSort"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="0.4"
                android:text="@string/sort"
                android:tooltipText="@string/sort"
                android:contentDescription="@string/sort"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:id="@+id/scroll_accommodations_list"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

